minor header background change, add responsive for header text,fixed booking__right overflow, add some change to video modal

--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
 }
 
 /* HEADER CSS  */
-header {
+/* header {
     background-size: cover;
     background-image: linear-gradient(to right, #ff6600, hsl(30deg 100% 1% / 20%)), url(./../image/banner1.jpg);
     background-repeat: no-repeat;
@@ -16,7 +16,14 @@ header {
     background-attachment: fixed;
     height: 100vh;
     padding-top: 20px;
+} */
+
+header {
+    background: linear-gradient(to right, #ff6600, hsl(30deg 100% 1% / 20%)), url(./../images/banner1.jpg) top / cover fixed;
+    height: 100vh;
+    padding-top: 20px;
 }
+
 .navbar-brand {
     font-size: 35px;
     font-weight: 900;
@@ -46,17 +53,21 @@ header {
     transition: all 0.5s;
     z-index: 999;
 }
+
 .fa-search:hover, .fa-bars:hover, .fa-moon:hover {
     color: #ff6600; 
 }
+
 .navbar__icon a, .fa-bars {
     color: #fff;
     font-size: 20px;
     transition: all 0.5s;
 }
+
 .fa-moon {
     transition: all 0.5s;
 }
+
 .collapse .navbar__menu {
     position: absolute;
     top: 0%;
@@ -65,15 +76,18 @@ header {
     height: 100vh;
     width: 100%;
 }
+
 .navbar-toggler {
     margin-left: 20px;
 }
+
 .btn__close {
     cursor: pointer;
     position: absolute;
     top: 0;
     right: 0;
 }
+
 .btn__close i {
     font-size: 20px;
     color: #fbfbfb;
@@ -82,9 +96,11 @@ header {
     margin: 30px;
     border-radius: 10px;
 }
+
 .navbar-nav {
     padding-top: 100px;
 }
+
 .navbar-nav a {
     font-weight: 900;
     padding: 10px 0;
@@ -97,19 +113,24 @@ header {
 .navbar-nav a:hover {
     color: #ff6600;
 }
+
 .navbar__content {
     margin-top: 100px;
+    margin-right: 30rem;
 }
+
 .navbar__content h1 {
     font-weight: 700;
     font-size: 55px;
     color: #fff;
 }
+
 .navbar__content p {
     color: #faf0d8;
     margin: 20px 0 40px 0;
     line-height: 26px;
 }
+
 .navbar__content button {
     padding: 20px 50px;
     background-color: transparent;
@@ -122,6 +143,20 @@ header {
 .navbar__content button:hover {
     background-color: white;
     color: #ff6600;
+}
+
+@media screen and (max-width:991px) {
+    .navbar__content {
+        margin-top: 2rem;
+        margin-right: 3rem;
+    }
+}
+
+@media screen and (max-width:767px) {
+    .navbar__content {
+        margin-top: 1rem;
+        margin-right: 2rem;
+    }
 }
 /* END HEADER CSS */
 
@@ -187,16 +222,18 @@ header {
 
 /* BOOKING */
 
-/* .booking__left {
-    background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url(./../images/banner3.jpg) center / cover no-repeat;
-} */
-
 .booking__left {
-    position: relative;
-    height: 100%;
+    background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url(./../images/banner3.jpg) center / cover no-repeat;
+    /* height: 600px; */
+    min-height: 100%;
 }
 
-.booking__left img {
+/* .booking__left {
+    position: relative;
+    height: 600px;
+} */
+
+/* .booking__left img {
     background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3));
     height: 100%;
 }
@@ -209,7 +246,7 @@ header {
     top: 0;
     left: 0;
     background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3));
-}
+} */
 
 .booking__right {
     padding: 5rem 8rem 5rem 4rem;
@@ -254,6 +291,12 @@ header {
 
 .booking__best .col:hover i {
     color: #ffc600;
+}
+
+@media screen and (max-width: 991px) {
+    .booking__left {
+        min-height: 525.58px;
+    }
 }
 
 /* CATERGORIES */
@@ -535,6 +578,15 @@ header {
     left: 0;
     right: 0;
     border-radius: 20px;
+}
+
+.video .modal-content {
+    background-color: transparent;
+    border: none;
+}
+
+.video .modal-content .modal-body iframe {
+    border-radius: 10px;
 }
 
 .video__icon i {
